control/legacy_workspaces/archive_legacy_ShadowTag-v2/psa-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: penal-colony
  labels:
    app: otel-monkeys
    env: production
    istio-injection: enabled
    colony-mode: PENAL
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
