control/legacy_workspaces/archive_legacy_ShadowTag-v2/flux-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: source-controller
spec:
  template:
    spec:
      serviceAccountName: flux-system # Lockdown
      containers:
        - name: manager
