control/legacy_workspaces/archive_legacy_ShadowTag-v2/penal-anti-affinity-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAntiAffinity
metadata: {name: penal-anti-affinity}
spec: {match: {kinds: [{kinds: ["Deployment"]}], namespaces: ["penal-colony"]}}
